--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0"
+        "php": ">=5.4.0",
+        "symfony/framework-bundle": "~2.1"
     },
     "autoload": {
         "psr-0": { "Kairos\\GoogleAnalyticsClientBundle": "" }
