--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
         "doctrine/cache" : "~1.3",
         "guzzle/guzzle": "~3.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "~4.2"
+    },
     "autoload": {
         "psr-0": { "Kairos\\GoogleAnalyticsClientBundle": "" }
     },
